# frcobot_ros2

./: API_description.md  README.md
docs/: plan.md
fairino10_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino10_v6_moveit2_config/config/: fairino10_v6_robot.ros2_control.xacro  fairino10_v6_robot.srdf  fairino10_v6_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fairino10_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fairino16_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino16_v6_moveit2_config/config/: fairino16_v6_robot.ros2_control.xacro  fairino16_v6_robot.srdf  fairino16_v6_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fairino16_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fairino20_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino20_v6_moveit2_config/config/: fairino20_v6_robot.ros2_control.xacro  fairino20_v6_robot.srdf  fairino20_v6_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fairino20_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fairino30_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino30_v6_moveit2_config/config/: fairino30_v6_robot.ros2_control.xacro  fairino30_v6_robot.srdf  fairino30_v6_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fairino30_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fairino3_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino3_v6_moveit2_config/config/: fairino3_v6_robot.ros2_control.xacro  fairino3_v6_robot.srdf  fairino3_v6_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  mtc.rviz  ros2_controllers.yaml
fairino3_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fairino3mt_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino3mt_v6_moveit2_config/config/: fairino.yaml  fairino3mt_v6_robot.ros2_control.xacro  fairino3mt_v6_robot.srdf  fairino3mt_v6_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fairino3mt_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fairino5_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino5_v6_moveit2_config/config/: fairino5_v6_robot.ros2_control.xacro  fairino5_v6_robot.srdf  joint_limits.yaml  (+5 more)
fairino_controllers/: CMakeLists.txt  fairino_controllers_plugin.xml  package.xml
fairino_controllers/include/fairino_controllers/: freedrive_mode_controller.hpp
fairino_controllers/launch/: freedrive.launch.py
fairino_controllers/src/: freedrive_mode_controller.cpp
fairino_description/: CMakeLists.txt  package.xml
fairino_hardware/: CMakeLists.txt  fairino_hardware.xml  package.xml
fairino_hardware/examples/include/: srv_test_client.hpp
fairino_hardware/examples/src/: srv_test_client.cpp
fairino_hardware/include/fairino_hardware/: command_server.hpp  data_type_def.h  fairino_hardware_interface.hpp  fairino_robot.hpp  version_control.h
fairino_hardware/include/fairino_version_pkg/: fairino_version.hpp
fairino_hardware/include/xmlrpc/: XmlRpcUtil.h
fairino_hardware/libfairino/include/: robot.h  robot_error.h  robot_types.h
fairino_hardware/libfairino/lib/: libfairino.so.2  libfairino.so.2.1.4  libfairino.so.2.1.7  libfairino.so.2.2.3  libfairino.so.2.2.4  libfairino.so.2.2.5  libfairino.so.2.2.6  libfairino.so.2.2.7  libfairino.so.2.3.0  libfairino.so.2.3.2  libfairino.so.2.3.3  libfairino.so.2.3.4
fairino_hardware/src/: command_server.cpp  command_server_node.cpp  fairino_hardware_interface.cpp  fairino_robot.cpp  fairino_version.cpp  fairino_version_node.cpp  fr_status_node.cpp  test_client.cpp
fairino_hardware_v3_8_2_11/: CMakeLists.txt  package.xml
fairino_hardware_v3_9_0/: CMakeLists.txt  package.xml
fairino_hardware_v3_9_0_1/: CMakeLists.txt  fairino_remotecmdinterface_para.yaml  package.xml
fairino_hardware_v3_9_4/: CMakeLists.txt  package.xml
fairino_hardware_v3_9_5/: CMakeLists.txt  fairino_hardware.xml  package.xml
fairino_msgs/: CMakeLists.txt  package.xml
fr3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fr_ros2/: CMakeLists.txt  fr_ros2_para.yaml  package.xml
fr_ros2/examples/include/: srv_test_client.hpp
fr_ros2/examples/src/: main.cpp  srv_test_client.cpp
fr_ros2/include/fr_ros2/: ROS_API.h  data_type_def.h  global_val.h  state_feedback.h
fr_ros2/src/: ROS_API.cpp  global_val.cpp  main.cpp  state_feedback.cpp
frcobot_description/: CMakeLists.txt  package.xml
frcobot_description/launch/: fr10robot_rviz.launch.py  fr3robot_gazebo.launch.py  fr3robot_rviz.launch.py  fr5robot_rviz.launch.py
frcobot_description/rviz/: fr10robot.rviz  fr3robot.rviz  fr5robot.rviz
frcobot_description/urdf/: fr3_gazebo.xacro  fr3_robot.urdf  fr3_robot.xacro
frhal_msgs/: CMakeLists.txt  package.xml
(+146 files in other folders)
