<?xml version="1.0"?>
<package format="3">
  <name>fairino_controllers</name>
  <version>0.0.0</version>
  <description>Fairino custom ros2_control controllers</description>
  <maintainer email="kirtan@raiserobotics.ai">Kirtan Thakkar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
