<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frcobot_description</name>
  <version>0.0.1</version>
  <description>Package containing the URDF and other descriptive files for the FRCOBot</description>
  <maintainer email="zxcvbnm914121@gmail.com">Mosiwon</maintainer>
  <license>BSD</license> <!-- Or the license that applies -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
